[package]
name = "stock-trader"
version = "0.1.0"
authors = ["namandwivedi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = {version = "1.0", features = ["blocking"]}
chrono = "0.4"
clap = "2.33.3"